fixed alignment for bottom sidebars

--- a/sass/_form.sass
+++ b/sass/_form.sass
@@ -2,11 +2,12 @@ input
   clear: both
   width: 50%
   height: 25px
-  margin: 0px
+  margin: 0 0 10px 0
   border: 1px solid $grey-bgr-light
   font-family: $quicksand 
   font-size: 1em
-  
+  display: block
+
 textarea
   clear: both
   width: 50%
@@ -36,7 +37,6 @@ label
   font-family: $quicksand
   margin: 0
   padding: 0
-  width: 20%
 
 span.required
   display: none
