--- a/sass/_sidebar.sass
+++ b/sass/_sidebar.sass
@@ -18,13 +18,13 @@ sidebar
       &:hover  
         color: $blue 
         text-decoration: underline
-    li
-      width: 28%
+    > li
+      width: 30%
       float: left
-      margin: 0 0 5% 5%
+      margin: 0 0 5% 0
       font-size: 2em
-      &:nth-child(3n) 
-        margin-right: 0%
+      &:nth-child(3n+2)
+        margin: 0 5% 5% 5%
       ul 
         width: 100%
         li
